--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ uvicorn = "^0.27.1"
 websockets = "^12.0"
 uuid = "^1.30"
 jinja2 = "^3.1.3"
+faker = "^24.0.0"
+cryptography = "^42.0.5"
+python-multipart = "^0.0.9"
 
 
 [build-system]
